new story added

--- a/work.html
+++ b/work.html
@@ -53,18 +53,29 @@
 
 						<!-- Posts -->
 							<section class="posts">
-								<!--  -->
 								<!-- <article>
 									<header>
 										<span class="date">, 2019</span>
-										<h3><a href=" ">Nationwide ‘Take Back The Night’ event brings awareness to sexual assault on college campuses</a></h3>
+										<h3><a href="">Lawsuit filed against news organizations</a></h3>
 									</header>
-									<a href=" " class="image fit"><img src="images/ict_.jpg" alt="" /></a>
-									<p>Students, faculty and community members gathered Tuesday evening to rally, march and speak out about sexual assault on college campuses for the national Take Back The Night event.</p>
+									<a href="" class="image fit"><img src="images/ict_lawsuit.jpg" alt="" /></a>
+									<p>John Dossett, former general counsel to the National Congress of American Indians, is suing High Country News, Indianz.com and Indian Country Today for defamation in a $ 6-million lawsuit filed in the District of Oregon.</p>
 									<ul class="actions special">
-										<li><a href=" " class="button">Full Story</a></li>
+										<li><a href="" target="_blank" class="button">Full Story</a></li>
 									</ul>
 								</article> -->
+
+								<article>
+									<header>
+										<span class="date">September 14, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/lawsuit-filed-against-news-organizations-fUTl5mvqE0C5UOe0dDemCg/">Lawsuit filed against news organizations</a></h3>
+									</header>
+									<a href="https://newsmaven.io/indiancountrytoday/news/lawsuit-filed-against-news-organizations-fUTl5mvqE0C5UOe0dDemCg/" class="image fit"><img src="images/ict_lawsuit.jpg" alt="" /></a>
+									<p>John Dossett, former general counsel to the National Congress of American Indians, is suing High Country News, Indianz.com and Indian Country Today for defamation in a $ 6-million lawsuit filed in the District of Oregon.</p>
+									<ul class="actions special">
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/lawsuit-filed-against-news-organizations-fUTl5mvqE0C5UOe0dDemCg/" target="_blank" class="button">Full Story</a></li>
+									</ul>
+								</article>
 
 								<!-- ICT, Castro Gracias -->
 								<article>
@@ -128,19 +139,6 @@
 									<p>Former congressman Joe Sestak from Pennsylvania started off the second day of the Frank LaMere Presidential Forum. </p>
 									<ul class="actions special">
 										<li><a href="https://newsmaven.io/indiancountrytoday/news/joe-sestak-kicks-off-day-two-of-the-presidential-forum-glHknhaMZEGYAgWftRmoYQ/" target="_blank" class="button">Full Story</a></li>
-									</ul>
-								</article>
-
-								<!-- ICT, Julián Castro -->
-								<article>
-									<header>
-										<span class="date">August 20, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/juli%C3%A1n-castro-receives-native-endorsements-he-is-an-unwavering-leader-VhKypLo3eUydEtkdS80oiA/" target="_blank">Julián Castro receives Native endorsements— he is an ‘unwavering leader’</a></h3>
-									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/juli%C3%A1n-castro-receives-native-endorsements-he-is-an-unwavering-leader-VhKypLo3eUydEtkdS80oiA/" target="_blank" class="image fit"><img src="images/work_images/ict_castro.jpg" alt="" /></a>
-									<p>Hours before the Julián Castro takes the stage at the Frank LaMere Presidential Forum, Indian Country Today learned his campaign has four new endorsements from Native leaders.</p>
-									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/juli%C3%A1n-castro-receives-native-endorsements-he-is-an-unwavering-leader-VhKypLo3eUydEtkdS80oiA/" target="_blank" class="button">Full Story</a></li>
 									</ul>
 								</article>
 							</section>
