--- a/work2.html
+++ b/work2.html
@@ -53,6 +53,19 @@
 
 						<!-- Posts -->
 							<section class="posts">
+								<!-- ICT, Julián Castro -->
+								<article>
+									<header>
+										<span class="date">August 20, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/juli%C3%A1n-castro-receives-native-endorsements-he-is-an-unwavering-leader-VhKypLo3eUydEtkdS80oiA/" target="_blank">Julián Castro receives Native endorsements— he is an ‘unwavering leader’</a></h3>
+									</header>
+									<a href="https://newsmaven.io/indiancountrytoday/news/juli%C3%A1n-castro-receives-native-endorsements-he-is-an-unwavering-leader-VhKypLo3eUydEtkdS80oiA/" target="_blank" class="image fit"><img src="images/work_images/ict_castro.jpg" alt="" /></a>
+									<p>Hours before the Julián Castro takes the stage at the Frank LaMere Presidential Forum, Indian Country Today learned his campaign has four new endorsements from Native leaders.</p>
+									<ul class="actions special">
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/juli%C3%A1n-castro-receives-native-endorsements-he-is-an-unwavering-leader-VhKypLo3eUydEtkdS80oiA/" target="_blank" class="button">Full Story</a></li>
+									</ul>
+								</article>
+								
 								<!-- ICT, Steve Bullock -->
 								<article>
 									<header>
@@ -115,19 +128,6 @@
 									<p>Rep. Tulsi Gabbard, D-Hawaii, traveled to North Dakota before taking the stage in Detroit for the Second Democratic debate. It was the 38-year-old’s second visit.</p>
 									<ul class="actions special">
 										<li><a href="https://newsmaven.io/indiancountrytoday/news/tulsi-gabbard-says-americans-need-to-address-broken-treaties-and-broken-promises-KRkLXH8e-EmTdXbUB1q7OA/"  target="_blank" class="button">Full Story</a></li>
-									</ul>
-								</article>
-
-								<!-- ICT, Aaron Yazzie -->
-								<article>
-									<header>
-										<span class="date">July 20, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/nasa-s-next-generation-of-natives-after-the-moon-it-s-the-2020-mission-to-mars-WAoQ6RMKmkCZx-hpSZVVhw/"  target="_blank">NASA's next generation of Natives: After the moon it's the 2020 Mission to Mars</a></h3>
-									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/nasa-s-next-generation-of-natives-after-the-moon-it-s-the-2020-mission-to-mars-WAoQ6RMKmkCZx-hpSZVVhw/"  target="_blank" class="image fit"><img src="images/work_images/ict_ayazzie.jpg" alt="" /></a>
-									<p>Aaron Yazzie sometimes felt like he was in a “little bubble" growing up on the Navajo Nation reservation in Holbrook, Arizona.</p>
-									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/nasa-s-next-generation-of-natives-after-the-moon-it-s-the-2020-mission-to-mars-WAoQ6RMKmkCZx-hpSZVVhw/"  target="_blank" class="button">Full Story</a></li>
 									</ul>
 								</article>
 							</section>
