put image in correct folder

--- a/work.html
+++ b/work.html
@@ -70,7 +70,7 @@
 										<span class="date">September 14, 2019</span>
 										<h3><a href="https://newsmaven.io/indiancountrytoday/news/lawsuit-filed-against-news-organizations-fUTl5mvqE0C5UOe0dDemCg/">Lawsuit filed against news organizations</a></h3>
 									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/lawsuit-filed-against-news-organizations-fUTl5mvqE0C5UOe0dDemCg/" class="image fit"><img src="images/ict_lawsuit.jpg" alt="" /></a>
+									<a href="https://newsmaven.io/indiancountrytoday/news/lawsuit-filed-against-news-organizations-fUTl5mvqE0C5UOe0dDemCg/" class="image fit"><img src="images/work_images/ict_lawsuit.jpg" alt="" /></a>
 									<p>John Dossett, former general counsel to the National Congress of American Indians, is suing High Country News, Indianz.com and Indian Country Today for defamation in a $ 6-million lawsuit filed in the District of Oregon.</p>
 									<ul class="actions special">
 										<li><a href="https://newsmaven.io/indiancountrytoday/news/lawsuit-filed-against-news-organizations-fUTl5mvqE0C5UOe0dDemCg/" target="_blank" class="button">Full Story</a></li>
