--- a/work2.html
+++ b/work2.html
@@ -53,6 +53,45 @@
 
 						<!-- Posts -->
 							<section class="posts">
+								<!-- ICT, Race Across the Sky -->
+								<article>
+									<header>
+										<span class="date">August 26, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/completing-a-100-mile-race-with-the-help-of-chinese-food-and-community-tf-td65SMkyAjx8nAOmFSw/" target="_blank">Completing a 100-mile race with the help of Chinese food and community</a></h3>
+									</header>
+									<a href="https://newsmaven.io/indiancountrytoday/news/completing-a-100-mile-race-with-the-help-of-chinese-food-and-community-tf-td65SMkyAjx8nAOmFSw/" target="_blank" class="image fit"><img src="images/work_images/ict_chinese_food.jpg" alt="" /></a>
+									<p>Racers endure 100 miles of Rocky Mountain terrain while climbing 15,600 feet to the finish line by foot or bike. The “Race Across the Sky,” also known as the Leadville Race Series, challenges thousands of athletes every year.</p>
+									<ul class="actions special">
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/completing-a-100-mile-race-with-the-help-of-chinese-food-and-community-tf-td65SMkyAjx8nAOmFSw/" target="_blank" class="button">Full Story</a></li>
+									</ul>
+								</article>
+
+								<!-- ICT, Castro Gracias -->
+								<article>
+									<header>
+										<span class="date">August 21, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/juli%C3%A1n-castro-has-specific-plans-for-indian-country-a-gracias-for-warm-welcome-47DZAzWKPkC90G1Mzd8fsA/" target="_blank">Julián Castro has specific plans for Indian Country & a ‘gracias’ for warm welcome</a></h3>
+									</header>
+									<a href="https://newsmaven.io/indiancountrytoday/news/juli%C3%A1n-castro-has-specific-plans-for-indian-country-a-gracias-for-warm-welcome-47DZAzWKPkC90G1Mzd8fsA/" target="_blank" class="image fit"><img src="images/work_images/ict_castro_language.jpg" alt="" /></a>
+									<p>A recurring theme of the Frank LaMere Native American Presidential Forum was language. Indian Country listened as panelists spoke various languages before they asked questions to White House hopefuls.</p>
+									<ul class="actions special">
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/juli%C3%A1n-castro-has-specific-plans-for-indian-country-a-gracias-for-warm-welcome-47DZAzWKPkC90G1Mzd8fsA/" target="_blank" class="button">Full Story</a></li>
+									</ul>
+								</article>
+
+								<!-- ICT, Sestak -->
+								<article>
+									<header>
+										<span class="date">August 20, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/joe-sestak-kicks-off-day-two-of-the-presidential-forum-glHknhaMZEGYAgWftRmoYQ/" target="_blank">Joe Sestak kicks off day two of the Presidential Forum</a></h3>
+									</header>
+									<a href="https://newsmaven.io/indiancountrytoday/news/joe-sestak-kicks-off-day-two-of-the-presidential-forum-glHknhaMZEGYAgWftRmoYQ/" target="_blank" class="image fit"><img src="images/work_images/ict_sestak.jpg" alt="" /></a>
+									<p>Former congressman Joe Sestak from Pennsylvania started off the second day of the Frank LaMere Presidential Forum. </p>
+									<ul class="actions special">
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/joe-sestak-kicks-off-day-two-of-the-presidential-forum-glHknhaMZEGYAgWftRmoYQ/" target="_blank" class="button">Full Story</a></li>
+									</ul>
+								</article>
+								
 								<!-- ICT, Julián Castro -->
 								<article>
 									<header>
@@ -65,7 +104,7 @@
 										<li><a href="https://newsmaven.io/indiancountrytoday/news/juli%C3%A1n-castro-receives-native-endorsements-he-is-an-unwavering-leader-VhKypLo3eUydEtkdS80oiA/" target="_blank" class="button">Full Story</a></li>
 									</ul>
 								</article>
-								
+
 								<!-- ICT, Steve Bullock -->
 								<article>
 									<header>
@@ -89,45 +128,6 @@
 									<p>Author Marianne Williamson took the stage, escorted by a tribal elder and youth, as she was introduced by Ruth Buffalo, the first Native woman in the North Dakota State Legislature.</p>
 									<ul class="actions special">
 										<li><a href="https://newsmaven.io/indiancountrytoday/news/marianne-williamson-i-will-apologize-QzxmJPz-HkuXdpgC6o4bGg/" target="_blank" class="button">Full Story</a></li>
-									</ul>
-								</article>
-
-								<!-- ICT, LaDonna Harris -->
-								<article>
-									<header>
-										<span class="date">August 18, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/ladonna-harris-stumbled-into-a-legacy-of-impact-UzsfOaQfKk2D0ycRBgZUFg/"  target="_blank">LaDonna Harris ‘stumbled’ into a legacy of impact</a></h3>
-									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/ladonna-harris-stumbled-into-a-legacy-of-impact-UzsfOaQfKk2D0ycRBgZUFg/"  target="_blank" class="image fit"><img src="images/work_images/ict_ladonna.jpg" alt="" /></a>
-									<p>LaDonna Harris remembers what Washington, D.C., was like in the 1960s. Tribal leaders had to travel back and forth across town, meeting in different offices, in order to get business done with the federal government.</p>
-									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/ladonna-harris-stumbled-into-a-legacy-of-impact-UzsfOaQfKk2D0ycRBgZUFg/" target="_blank" class="button">Full Story</a></li>
-									</ul>
-								</article>
-
-								<!-- ICT, Iowa Powwow -->
-								<article>
-									<header>
-										<span class="date">August 12, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/iowa-s-powwow-trail-had-a-campaign-stop-GSowHA4SjUy3zPbHWWNsAw/"  target="_blank">Iowa's powwow trail had a campaign stop</a></h3>
-									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/iowa-s-powwow-trail-had-a-campaign-stop-GSowHA4SjUy3zPbHWWNsAw/"  target="_blank" class="image fit"><img src="images/work_images/ict_iowa.jpg" alt="" /></a>
-									<p>Three presidential candidates reached out to powwow goers Saturday and talked about tribal sovereignty, reparations and removing Andrew Jackson from the White House's Oval Office.</p>
-									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/iowa-s-powwow-trail-had-a-campaign-stop-GSowHA4SjUy3zPbHWWNsAw/"  target="_blank" class="button">Full Story</a></li>
-									</ul>
-								</article>
-
-								<!-- ICT, Gabbard -->
-								<article>
-									<header>
-										<span class="date">August 2, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/tulsi-gabbard-says-americans-need-to-address-broken-treaties-and-broken-promises-KRkLXH8e-EmTdXbUB1q7OA/"  target="_blank">Tulsi Gabbard says Americans need to address ‘broken treaties and broken promises’</a></h3>
-									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/tulsi-gabbard-says-americans-need-to-address-broken-treaties-and-broken-promises-KRkLXH8e-EmTdXbUB1q7OA/"  target="_blank" class="image fit"><img src="images/work_images/ict_gabbard_nd.jpeg" alt="" /></a>
-									<p>Rep. Tulsi Gabbard, D-Hawaii, traveled to North Dakota before taking the stage in Detroit for the Second Democratic debate. It was the 38-year-old’s second visit.</p>
-									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/tulsi-gabbard-says-americans-need-to-address-broken-treaties-and-broken-promises-KRkLXH8e-EmTdXbUB1q7OA/"  target="_blank" class="button">Full Story</a></li>
 									</ul>
 								</article>
 							</section>
