--- a/work.html
+++ b/work.html
@@ -154,6 +154,7 @@
 									<!-- <span class="extra">&hellip;</span> -->
 									<a href="work3.html" class="page">3</a>
 									<a href="work4.html" class="page">4</a>
+									<a href="work5.html" class="page">5</a>
 									<!-- <a href="#" class="page">9</a> -->
 									<!-- <a href="#" class="page">10</a> -->
 									<a href="work2.html" class="next">Next</a>
