--- a/work2.html
+++ b/work2.html
@@ -91,7 +91,7 @@
 										<li><a href="https://newsmaven.io/indiancountrytoday/news/joe-sestak-kicks-off-day-two-of-the-presidential-forum-glHknhaMZEGYAgWftRmoYQ/" target="_blank" class="button">Full Story</a></li>
 									</ul>
 								</article>
-								
+
 								<!-- ICT, Julián Castro -->
 								<article>
 									<header>
@@ -142,6 +142,7 @@
 									<!-- <span class="extra">&hellip;</span> -->
 									<a href="work3.html" class="page">3</a>
 									<a href="work4.html" class="page">4</a>
+									<a href="work5.html" class="page">5</a>
 									<!-- <a href="#" class="page">9</a> -->
 									<!-- <a href="#" class="page">10</a> -->
 									<a href="work3.html" class="next">Next</a>
