--- a/work3.html
+++ b/work3.html
@@ -134,12 +134,13 @@
 							<!-- Footer -->
 							<footer>
 								<div class="pagination">
-									<a href="work.html" class="previous">Prev</a>
+									<a href="work2.html" class="previous">Prev</a>
 									<a href="work.html" class="page">1</a>
 									<a href="work2.html" class="page">2</a>
 									<!-- <span class="extra">&hellip;</span> -->
 									<a href="#" class="page active">3</a>
 									<a href="work4.html" class="page">4</a>
+									<a href="work5.html" class="page">5</a>
 									<!-- <a href="#" class="page">9</a> -->
 									<!-- <a href="#" class="page">10</a> -->
 									<a href="work4.html" class="next">Next</a>
