--- a/work5.html
+++ b/work5.html
@@ -106,13 +106,14 @@
 							<!-- Footer -->
 							<footer>
 								<div class="pagination">
-									<a href="work.html" class="previous">Prev</a>
+									<a href="work4.html" class="previous">Prev</a>
 									<a href="work.html" class="page">1</a>
 									<a href="work2.html" class="page">2</a>
 									
 									<!-- <span class="extra">&hellip;</span> -->
 									<a href="work3.html" class="page">3</a>
-									<a href="#" class="page active">4</a>
+									<a href="work4.html" class="page">4</a>
+									<a href="#" class="page active">5</a>
 									<!-- <a href="#" class="page">9</a> -->
 									<!-- <a href="#" class="page">10</a> -->
 									<!-- <a href="work3.html" class="next">Next</a> -->
