--- a/work.html
+++ b/work.html
@@ -71,7 +71,7 @@
 										<span class="date">September 26, 2019</span>
 										<h3><a href="https://newsmaven.io/indiancountrytoday/news/as-a-journalist-amaya-works-his-camera-as-i-would-my-pen-AKwlcTDGUUSwQh-hCZ4omQ/">As a journalist Amaya works his ‘camera as I would my pen’</a></h3>
 									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/as-a-journalist-amaya-works-his-camera-as-i-would-my-pen-AKwlcTDGUUSwQh-hCZ4omQ/" class="image fit"><img src="images/ict_amaya.jpg" alt="" /></a>
+									<a href="https://newsmaven.io/indiancountrytoday/news/as-a-journalist-amaya-works-his-camera-as-i-would-my-pen-AKwlcTDGUUSwQh-hCZ4omQ/" class="image fit"><img src="images/work/ict_amaya.jpg" alt="" /></a>
 									<p>Tomás Karmelo Amaya joins Indian Country Today as the creative director. He is Yoeme, A:shiwi and Rarámuri.</p>
 									<ul class="actions special">
 										<li><a href="https://newsmaven.io/indiancountrytoday/news/as-a-journalist-amaya-works-his-camera-as-i-would-my-pen-AKwlcTDGUUSwQh-hCZ4omQ/" target="_blank" class="button">Full Story</a></li>
@@ -84,7 +84,7 @@
 										<span class="date">September 25, 2019</span>
 										<h3><a href="https://newsmaven.io/indiancountrytoday/news/behind-the-scenes-grandma-sheep-is-running-away-6JeLn2o8cE-RmzKuclfvAw/">Behind the scenes: ‘Grandma! Sheep is running away’</a></h3>
 									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/behind-the-scenes-grandma-sheep-is-running-away-6JeLn2o8cE-RmzKuclfvAw/" class="image fit"><img src="images/ict_grandma.jpg" alt="" /></a>
+									<a href="https://newsmaven.io/indiancountrytoday/news/behind-the-scenes-grandma-sheep-is-running-away-6JeLn2o8cE-RmzKuclfvAw/" class="image fit"><img src="images/work/ict_grandma.jpg" alt="" /></a>
 									<p>A spec is a “made-up” commercial that filmmakers use to showcase their talent and potential. That is exactly what Diné filmmaker Christopher Nataanii Cegielski did when he created his New Balance spec called “For Any Run.”</p>
 									<ul class="actions special">
 										<li><a href="https://newsmaven.io/indiancountrytoday/news/behind-the-scenes-grandma-sheep-is-running-away-6JeLn2o8cE-RmzKuclfvAw/" target="_blank" class="button">Full Story</a></li>
@@ -97,7 +97,7 @@
 										<span class="date">September 24, 2019</span>
 										<h3><a href="https://newsmaven.io/indiancountrytoday/news/first-an-iowa-forum-and-now-the-native-press-is-a-campaign-stop-H8yrPheMY0Wh8PNJMkLfQg/">First an Iowa forum ... and now the Native press is a campaign stop</a></h3>
 									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/first-an-iowa-forum-and-now-the-native-press-is-a-campaign-stop-H8yrPheMY0Wh8PNJMkLfQg/" class="image fit"><img src="images/ict_iowa_native_press.jpg" alt="" /></a>
+									<a href="https://newsmaven.io/indiancountrytoday/news/first-an-iowa-forum-and-now-the-native-press-is-a-campaign-stop-H8yrPheMY0Wh8PNJMkLfQg/" class="image fit"><img src="images/work/ict_iowa_native_press.jpg" alt="" /></a>
 									<p>Tomorrow Montana Governor Steve Bullock will sit down for a one-on-one interview at the Indian Country Today headquarters located at The Walter Cronkite School of Journalism and Mass Communication at Arizona State University.</p>
 									<ul class="actions special">
 										<li><a href="https://newsmaven.io/indiancountrytoday/news/first-an-iowa-forum-and-now-the-native-press-is-a-campaign-stop-H8yrPheMY0Wh8PNJMkLfQg/" target="_blank" class="button">Full Story</a></li>
