--- a/work.html
+++ b/work.html
@@ -58,7 +58,7 @@
 										<span class="date">, 2019</span>
 										<h3><a href="">Lawsuit filed against news organizations</a></h3>
 									</header>
-									<a href="" class="image fit"><img src="images/ict_lawsuit.jpg" alt="" /></a>
+									<a href="" class="image fit"><img src="images/work/ict_lawsuit.jpg" alt="" /></a>
 									<p>John Dossett, former general counsel to the National Congress of American Indians, is suing High Country News, Indianz.com and Indian Country Today for defamation in a $ 6-million lawsuit filed in the District of Oregon.</p>
 									<ul class="actions special">
 										<li><a href="" target="_blank" class="button">Full Story</a></li>
