--- a/work.html
+++ b/work.html
@@ -84,7 +84,7 @@
 										<span class="date">October 14, 2019</span>
 										<h3><a href="https://newsmaven.io/indiancountrytoday/news/indigenizing-research-institutions-two-journalists-honored-by-the-american-academy-kzlpttbl5Em9Y8YBGK4YXg/">‘Indigenizing research institutions’: Two journalists honored by The American Academy</a></h3>
 									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/indigenizing-research-institutions-two-journalists-honored-by-the-american-academy-kzlpttbl5Em9Y8YBGK4YXg/" class="image fit"><img src="images/work_images/ict_academy.jpg" alt="" /></a>
+									<a href="https://newsmaven.io/indiancountrytoday/news/indigenizing-research-institutions-two-journalists-honored-by-the-american-academy-kzlpttbl5Em9Y8YBGK4YXg/" class="image fit"><img src="images/work_images/ict_academy.jpeg" alt="" /></a>
 									<p>The American Academy of Arts and Sciences is the oldest honor society in the nation. </p>
 									<ul class="actions special">
 										<li><a href="https://newsmaven.io/indiancountrytoday/news/indigenizing-research-institutions-two-journalists-honored-by-the-american-academy-kzlpttbl5Em9Y8YBGK4YXg/" target="_blank" class="button">Full Story</a></li>
@@ -155,7 +155,7 @@
 									<a href="work3.html" class="page">3</a>
 									<a href="work4.html" class="page">4</a>
 									<a href="work5.html" class="page">5</a>
-									<!-- <a href="#" class="page">9</a> -->
+									<a href="work6.html" class="page">6</a>
 									<!-- <a href="#" class="page">10</a> -->
 									<a href="work2.html" class="next">Next</a>
 								</div>
