--- a/work2.html
+++ b/work2.html
@@ -155,7 +155,7 @@
 									<a href="work3.html" class="page">3</a>
 									<a href="work4.html" class="page">4</a>
 									<a href="work5.html" class="page">5</a>
-									<!-- <a href="#" class="page">9</a> -->
+									<a href="work6.html" class="page">6</a>
 									<!-- <a href="#" class="page">10</a> -->
 									<a href="work2.html" class="next">Next</a>
 								</div>
