--- a/work4.html
+++ b/work4.html
@@ -141,7 +141,7 @@
 									<a href="#" class="page active">3</a>
 									<a href="work4.html" class="page">4</a>
 									<a href="work5.html" class="page">5</a>
-									<!-- <a href="#" class="page">9</a> -->
+									<a href="work6.html" class="page">6</a>
 									<!-- <a href="#" class="page">10</a> -->
 									<a href="work4.html" class="next">Next</a>
 								</div>
