--- a/work.html
+++ b/work.html
@@ -64,6 +64,19 @@
 										<li><a href="" target="_blank" class="button">Full Story</a></li>
 									</ul>
 								</article> -->
+
+								<!-- Amaya -->
+								<article>
+									<header>
+										<span class="date">October 23, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/message-to-tribal-leaders-learn-new-things-and-bring-it-home-6bYNvOn9T0OFbFBTUbFBbQ/">Message to tribal leaders: Learn new things and bring it home</a></h3>
+									</header>
+									<a href="https://newsmaven.io/indiancountrytoday/news/message-to-tribal-leaders-learn-new-things-and-bring-it-home-6bYNvOn9T0OFbFBTUbFBbQ/" class="image fit"><img src="images/work_images/ict_tribal_leaders.jpg" alt="" /></a>
+									<p>Tribal leaders are meeting at the annual conference of the National Congress of American Indians in Albuquerque, New Mexico.</p>
+									<ul class="actions special">
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/message-to-tribal-leaders-learn-new-things-and-bring-it-home-6bYNvOn9T0OFbFBTUbFBbQ/" target="_blank" class="button">Full Story</a></li>
+									</ul>
+								</article>
 								
 								<!-- ICT, Cuddlefish -->
 								<article>
@@ -127,19 +140,6 @@
 									<p>The remains of 20 Native people and 28 funerary objects will be returned to the tribes with relations to Mesa Verde, the White House announced on Wednesday.</p>
 									<ul class="actions special">
 										<li><a href="https://newsmaven.io/indiancountrytoday/news/video-lost-hopi-senom-will-soon-complete-journeys-to-their-families-wXgU63gPaUqRYOOSyRIwSA/" target="_blank" class="button">Full Story</a></li>
-									</ul>
-								</article>
-
-								<!-- Amaya -->
-								<article>
-									<header>
-										<span class="date">September 26, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/as-a-journalist-amaya-works-his-camera-as-i-would-my-pen-AKwlcTDGUUSwQh-hCZ4omQ/">As a journalist Amaya works his ‘camera as I would my pen’</a></h3>
-									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/as-a-journalist-amaya-works-his-camera-as-i-would-my-pen-AKwlcTDGUUSwQh-hCZ4omQ/" class="image fit"><img src="images/work_images/ict_amaya.jpg" alt="" /></a>
-									<p>Tomás Karmelo Amaya joins Indian Country Today as the creative director. He is Yoeme, A:shiwi and Rarámuri.</p>
-									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/as-a-journalist-amaya-works-his-camera-as-i-would-my-pen-AKwlcTDGUUSwQh-hCZ4omQ/" target="_blank" class="button">Full Story</a></li>
 									</ul>
 								</article>
 							</section>
