--- a/work2.html
+++ b/work2.html
@@ -148,8 +148,8 @@
 							<footer>
 								<div class="pagination">
 									<!--<a href="#" class="previous">Prev</a>-->
-									<a href="#" class="page active">1</a>
-									<a href="work2.html" class="page">2</a>
+									<a href="work.html" class="page">1</a>
+									<a href="#" class="page active">2</a>
 									
 									<!-- <span class="extra">&hellip;</span> -->
 									<a href="work3.html" class="page">3</a>
@@ -157,7 +157,7 @@
 									<a href="work5.html" class="page">5</a>
 									<a href="work6.html" class="page">6</a>
 									<!-- <a href="#" class="page">10</a> -->
-									<a href="work2.html" class="next">Next</a>
+									<a href="work3.html" class="next">Next</a>
 								</div>
 							</footer>
 					</div>
