--- a/work.html
+++ b/work.html
@@ -65,6 +65,18 @@
 									</ul>
 								</article> -->
 
+								<article>
+									<header>
+										<span class="date">October 25, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/arizona-s-teacher-of-the-year-makes-learning-fun-W4lKtguDeEaGaJ1-N34LhQ/">Arizona’s teacher of the year makes learning fun</a></h3>
+									</header>
+									<a href="https://newsmaven.io/indiancountrytoday/news/arizona-s-teacher-of-the-year-makes-learning-fun-W4lKtguDeEaGaJ1-N34LhQ/" class="image fit"><img src="images/work_images/ict_teacher.jpg" alt="" /></a>
+									<p>Lynette Stant makes learning fun— and that’s the word from her students. Now the state of Arizona knows, too. On Thursday Stant, accepted the award for 2020 Arizona Teacher of the Year.</p>
+									<ul class="actions special">
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/arizona-s-teacher-of-the-year-makes-learning-fun-W4lKtguDeEaGaJ1-N34LhQ/" target="_blank" class="button">Full Story</a></li>
+									</ul>
+								</article>
+
 								<!-- Amaya -->
 								<article>
 									<header>
@@ -127,19 +139,6 @@
 									<p>The City of Phoenix made “dramatic improvements” to the trailhead of Piestewa Peak, the city’s busiest hiking mountain. It reopened on Friday after a ribbon cutting ceremony.</p>
 									<ul class="actions special">
 										<li><a href="https://newsmaven.io/indiancountrytoday/news/video-dramatic-improvements-to-piestewa-peak-trail-SuwjFXYlMkaA0L0MGNo4yw/" target="_blank" class="button">Full Story</a></li>
-									</ul>
-								</article>
-
-								<!-- ICT, Lost Hopi -->
-								<article>
-									<header>
-										<span class="date">October 4, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/video-lost-hopi-senom-will-soon-complete-journeys-to-their-families-wXgU63gPaUqRYOOSyRIwSA/" target="_blank">Video: Lost Hopi senom will soon complete journeys to their families</a></h3>
-									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/video-lost-hopi-senom-will-soon-complete-journeys-to-their-families-wXgU63gPaUqRYOOSyRIwSA/" target="_blank" class="image fit"><img src="images/work_images/ict_lost_hopi.jpg" alt="" /></a>
-									<p>The remains of 20 Native people and 28 funerary objects will be returned to the tribes with relations to Mesa Verde, the White House announced on Wednesday.</p>
-									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/video-lost-hopi-senom-will-soon-complete-journeys-to-their-families-wXgU63gPaUqRYOOSyRIwSA/" target="_blank" class="button">Full Story</a></li>
 									</ul>
 								</article>
 							</section>
