--- a/work3.html
+++ b/work3.html
@@ -53,6 +53,18 @@
 
 						<!-- Posts -->
 							<section class="posts">
+								<!-- ICT, Booker, Climate Resistance -->
+								<article>
+									<header>
+										<span class="date">September 6, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/senator-calls-indigenous-communities-the-center-of-a-climate-resilience-wKv-H0FgqUqDi17rGyninw/" target="_blank">Senator calls Indigenous communities ‘the center’ of a climate resilience</a></h3>
+									</header>
+									<a href="https://newsmaven.io/indiancountrytoday/news/senator-calls-indigenous-communities-the-center-of-a-climate-resilience-wKv-H0FgqUqDi17rGyninw/" target="_blank" class="image fit"><img src="images/work_images/ict_climate_resistance.jpg" alt="" /></a>
+									<p>Presidential candidate Cory Booker says Indian Country is a critical part of his $3 trillion climate and economic justice plan.</p>
+									<ul class="actions special">
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/senator-calls-indigenous-communities-the-center-of-a-climate-resilience-wKv-H0FgqUqDi17rGyninw/" target="_blank" class="button">Full Story</a></li>
+									</ul>
+								</article>
 								<!-- ICT, Race Across the Sky -->
 								<article>
 									<header>
@@ -115,19 +127,6 @@
 									<p>Montana Governor Steve Bullock was the fourth and final candidate to speak on Monday at the Frank LaMere Presidential Forum in Sioux City, Iowa.</p>
 									<ul class="actions special">
 										<li><a href="https://newsmaven.io/indiancountrytoday/news/steve-bullock-cites-previous-experience-working-with-indian-country-z6KOEfw8vkCOW1XJV7oGGA/" target="_blank" class="button">Full Story</a></li>
-									</ul>
-								</article>
-
-								<!-- ICT, Marianne Williamson -->
-								<article>
-									<header>
-										<span class="date">August 19, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/marianne-williamson-i-will-apologize-QzxmJPz-HkuXdpgC6o4bGg/" target="_blank">Marianne Williamson: ‘I will apologize’</a></h3>
-									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/marianne-williamson-i-will-apologize-QzxmJPz-HkuXdpgC6o4bGg/" target="_blank" class="image fit"><img src="images/work_images/ict_marianne.jpg" alt="" /></a>
-									<p>Author Marianne Williamson took the stage, escorted by a tribal elder and youth, as she was introduced by Ruth Buffalo, the first Native woman in the North Dakota State Legislature.</p>
-									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/marianne-williamson-i-will-apologize-QzxmJPz-HkuXdpgC6o4bGg/" target="_blank" class="button">Full Story</a></li>
 									</ul>
 								</article>
 							</section>
