--- a/work4.html
+++ b/work4.html
@@ -53,6 +53,18 @@
 
 						<!-- Posts -->
 							<section class="posts">
+								<!-- ICT, Marianne Williamson -->
+								<article>
+									<header>
+										<span class="date">August 19, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/marianne-williamson-i-will-apologize-QzxmJPz-HkuXdpgC6o4bGg/" target="_blank">Marianne Williamson: ‘I will apologize’</a></h3>
+									</header>
+									<a href="https://newsmaven.io/indiancountrytoday/news/marianne-williamson-i-will-apologize-QzxmJPz-HkuXdpgC6o4bGg/" target="_blank" class="image fit"><img src="images/work_images/ict_marianne.jpg" alt="" /></a>
+									<p>Author Marianne Williamson took the stage, escorted by a tribal elder and youth, as she was introduced by Ruth Buffalo, the first Native woman in the North Dakota State Legislature.</p>
+									<ul class="actions special">
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/marianne-williamson-i-will-apologize-QzxmJPz-HkuXdpgC6o4bGg/" target="_blank" class="button">Full Story</a></li>
+									</ul>
+								</article>
 								<!-- ICT, LaDonna Harris -->
 								<article>
 									<header>
@@ -114,19 +126,6 @@
 									<p>Kanaka Maoli, Native Hawaiians, are peacefully protesting the construction of a Thirty Meter Telescope on their sacred site, Mauna Kea.</p>
 									<ul class="actions special">
 										<li><a href="https://newsmaven.io/indiancountrytoday/news/kanaka-maoli-do-not-mistake-our-aloha-for-weakness-c0x8lkRr90miH95TkZcfZA/"  target="_blank" class="button">Full Story</a></li>
-									</ul>
-								</article>
-
-								<!-- ICT, Super Bowl Youth -->
-								<article>
-									<header>
-										<span class="date">July 4, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/the-super-bowl-of-native-youth-gatherings-kicks-off-in-sunny-florida-CxHUjBPNaESs5LcvkjCymQ/"  target="_blank">The ‘Super Bowl of Native youth gatherings’ kicks off in sunny Florida</a></h3>
-									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/the-super-bowl-of-native-youth-gatherings-kicks-off-in-sunny-florida-CxHUjBPNaESs5LcvkjCymQ/"  target="_blank" class="image fit"><img src="images/work_images/ict_sb_youth.jpg" alt="" /></a>
-									<p>More than 2,000 Native youth from across Indian Country have packed their bags and arrived in Orlando. They will attend United National Indian Tribal Youth organization’s signature event, their annual conference, for the next five days.</p>
-									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/the-super-bowl-of-native-youth-gatherings-kicks-off-in-sunny-florida-CxHUjBPNaESs5LcvkjCymQ/"  target="_blank" class="button">Full Story</a></li>
 									</ul>
 								</article>
 							</section>
