--- a/work6.html
+++ b/work6.html
@@ -53,6 +53,18 @@
 
 						<!-- Posts -->
 							<section class="posts">
+								<!-- WVV, Veteran Housing -->
+								<article>
+									<header>
+										<span class="date">September 5, 2018</span>
+										<h3><a href="https://www.westvalleyview.com/news/west-valley-voters-cast-their-ballots-for-primary/article_66604f88-b094-11e8-ba65-2f663aa990f7.html"  target="_blank">West Valley voters cast their ballots for primary</a></h3>
+									</header>
+									<a href="https://www.westvalleyview.com/news/west-valley-voters-cast-their-ballots-for-primary/article_66604f88-b094-11e8-ba65-2f663aa990f7.html"  target="_blank" class="image fit"><img src="images/work_images/wvv_voters.jpg" alt="" /></a>
+									<p>Voters across the state, including the West Valley, hit the polls for the August 28 primary election, looking to elect candidates in various races.</p>
+									<ul class="actions special">
+										<li><a href="https://www.westvalleyview.com/news/west-valley-voters-cast-their-ballots-for-primary/article_66604f88-b094-11e8-ba65-2f663aa990f7.html"  target="_blank" class="button">Full Story</a></li>
+									</ul>
+								</article>
 								<!-- WVV, Miss Native America 2018 -->
 								<article>
 									<header>
