--- a/work2.html
+++ b/work2.html
@@ -53,17 +53,18 @@
 
 						<!-- Posts -->
 							<section class="posts">
-								<!-- <article>
+								<!-- ICT, Lost Hopi -->
+								<article>
 									<header>
-										<span class="date">, 2019</span>
-										<h3><a href="">Lawsuit filed against news organizations</a></h3>
+										<span class="date">October 4, 2019</span>
+										<h3><a href="https://newsmaven.io/indiancountrytoday/news/video-lost-hopi-senom-will-soon-complete-journeys-to-their-families-wXgU63gPaUqRYOOSyRIwSA/" target="_blank">Video: Lost Hopi senom will soon complete journeys to their families</a></h3>
 									</header>
-									<a href="" class="image fit"><img src="images/work_images/ict_lawsuit.jpg" alt="" /></a>
-									<p>John Dossett, former general counsel to the National Congress of American Indians, is suing High Country News, Indianz.com and Indian Country Today for defamation in a $ 6-million lawsuit filed in the District of Oregon.</p>
+									<a href="https://newsmaven.io/indiancountrytoday/news/video-lost-hopi-senom-will-soon-complete-journeys-to-their-families-wXgU63gPaUqRYOOSyRIwSA/" target="_blank" class="image fit"><img src="images/work_images/ict_lost_hopi.jpg" alt="" /></a>
+									<p>The remains of 20 Native people and 28 funerary objects will be returned to the tribes with relations to Mesa Verde, the White House announced on Wednesday.</p>
 									<ul class="actions special">
-										<li><a href="" target="_blank" class="button">Full Story</a></li>
+										<li><a href="https://newsmaven.io/indiancountrytoday/news/video-lost-hopi-senom-will-soon-complete-journeys-to-their-families-wXgU63gPaUqRYOOSyRIwSA/" target="_blank" class="button">Full Story</a></li>
 									</ul>
-								</article> -->
+								</article>
 								
 								<!-- Amaya -->
 								<article>
@@ -127,19 +128,6 @@
 									<p>Lane Yazzie, Diné, is a fifth-year student at San Diego State University concentrating on interdisciplinary studies. Yazzie found the transition from high school to college as difficult.</p>
 									<ul class="actions special">
 										<li><a href="https://newsmaven.io/indiancountrytoday/news/the-university-experience-wasn-t-made-for-native-students-like-me-NumDeZFg0kWHq9JrRC-pwA/" target="_blank" class="button">Full Story</a></li>
-									</ul>
-								</article>
-
-								<!-- ICT, Booker, Climate Resistance -->
-								<article>
-									<header>
-										<span class="date">September 6, 2019</span>
-										<h3><a href="https://newsmaven.io/indiancountrytoday/news/senator-calls-indigenous-communities-the-center-of-a-climate-resilience-wKv-H0FgqUqDi17rGyninw/" target="_blank">Senator calls Indigenous communities ‘the center’ of a climate resilience</a></h3>
-									</header>
-									<a href="https://newsmaven.io/indiancountrytoday/news/senator-calls-indigenous-communities-the-center-of-a-climate-resilience-wKv-H0FgqUqDi17rGyninw/" target="_blank" class="image fit"><img src="images/work_images/ict_climate_resistance.jpg" alt="" /></a>
-									<p>Presidential candidate Cory Booker says Indian Country is a critical part of his $3 trillion climate and economic justice plan.</p>
-									<ul class="actions special">
-										<li><a href="https://newsmaven.io/indiancountrytoday/news/senator-calls-indigenous-communities-the-center-of-a-climate-resilience-wKv-H0FgqUqDi17rGyninw/" target="_blank" class="button">Full Story</a></li>
 									</ul>
 								</article>
 							</section>
